<resources>
    <string name="app_name">ClassApplication</string>
    <string name="greet">Greetings</string>
    <string name="hello_world">Hello, World!</string>
    <string name="call">Call</string>
    <string name="lifecycle">Lifecycle</string>
    <string name="to_b">to B</string>
    <string name="to_c">to C</string>
    <string name="a">A</string>
    <string name="d">D</string>
    <string name="toa">toA</string>
    <string name="send">Send</string>
    <string name="start_activity_b">To B</string>
    <string name="start_activity_c">To C</string>
    <string name="send_text">Send Text</string>
    <string name="input_text">Input Text</string>
    <string name="user">User</string>
    <string name="name">Name</string>
    <string name="login">login</string>
    <string name="init_operation">Init operation</string>
    <string name="type_the_name">Type the name</string>
    <string name="type_the_surname">Type the surname</string>
    <string name="citizen">Citizen</string>
    <string name="company">Company</string>
    <string name="type_the_company_id">Type the company Id</string>
    <string name="_666666">666666</string>
    <string name="company_email">info@mobapps.com</string>
    <string name="company_web">https://google.com</string>
    <string name="tvweighttext">Weight</string>
    <string name="kg">Kg.</string>
    <string name="soft_tyre">Soft Tyre</string>
    <string name="product_1">Product 1</string>
    <string name="medium_tyre">Medium Tyre</string>
    <string name="product_2">Product 2</string>
    <string name="hard_tyre">Hard Tyre</string>
    <string name="product_3">Product 3</string>
</resources>