<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityB4">

    <RadioGroup
        android:id="@+id/rgSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbCitizen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/citizen" />

        <RadioButton
            android:id="@+id/rbCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/layoutCitizen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgSelector">

        <EditText
            android:id="@+id/etCitizenName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/type_the_name"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etCitizenSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/type_the_surname"
            android:inputType="text"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnInitCitizen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/init_operation" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCompany"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgSelector">

        <EditText
            android:id="@+id/etCompanyId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/type_the_company_id"
            android:inputType="text"
            android:minHeight="48dp" />

        <Spinner
            android:id="@+id/spCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnInitCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/init_operation" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>