<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityC4">

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvCompanyId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvCompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="MobApps" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvCompanyPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_666666" />

            <Button
                android:id="@+id/btnCompanyCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/call" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnCompanySend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="328dp"
                android:text="@string/send" />

            <TextView
                android:id="@+id/tvCompanyEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_email" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnCompanyOpen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Open" />

            <TextView
                android:id="@+id/tvCompanyWeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_web" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>