<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityD4">

    <TableLayout
        android:id="@+id/table"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/tr1"
            android:layout_width="match_parent"
            android:layout_height="84dp">

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tr2"
            android:layout_width="128dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivProduct1"
                    android:layout_width="116dp"
                    android:layout_height="104dp"
                    android:contentDescription="@string/product_1"
                    tools:srcCompat="@tools:sample/avatars" />

                <CheckBox
                    android:id="@+id/cbProduct1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvProduct1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_1" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tr3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivProduct2"
                    android:layout_width="115dp"
                    android:layout_height="111dp"
                    android:contentDescription="@string/product_2"
                    tools:srcCompat="@tools:sample/avatars" />

                <CheckBox
                    android:id="@+id/cbProduct2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvProduct2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_2" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tr4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivProduct3"
                    android:layout_width="116dp"
                    android:layout_height="114dp"
                    android:contentDescription="@string/product_3"
                    tools:srcCompat="@tools:sample/avatars" />

                <CheckBox
                    android:id="@+id/cbProduct3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvProduct3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_3" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tr5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight" />

                <TextView
                    android:id="@+id/tvTotalValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0" />

                <TextView
                    android:id="@+id/tvTotalWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kg" />
            </LinearLayout>

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>